--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ a {
     text-decoration: none; 
     }
 h1 {
-    background-color: #cccccc;
+    background-color: #FFFFFF;
     font-family: "Arial", sans-serif;
     text-align: center;
      padding-top: 50px;
     padding-right: 30px;
     padding-bottom: 50px;
     padding-left: 80px;
-    color:#FFFFFF;
+    color:#000000;
     border: 5px solid #000000;
 }
 p {
