--- a/index.html
+++ b/index.html
@@ -32,4 +32,8 @@ p {
 </head>
 <body>
 <h1>javascript tutorial</h1>
+<script> 
+    var test = prompt("What is 2 + 2?", "Enter number here");
+    console.log(test);
+    </script>
 </body>
