--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ p {
 <h1>javascript tutorial</h1>
 <script> 
     var test = prompt("What is 2 + 2?", "Enter number here");
-    console.log(test);
+    document.getElementById("demo").innerHTML = test;
     </script>
 </body>
