--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ p {
 </head>
 <body>
 <h1>javascript tutorial</h1>
+    <p id="demo"></p>
 <script> 
     var test = prompt("What is 2 + 2?", "Enter number here");
     document.getElementById("demo").innerHTML = test;
