--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1 {
 p {
     border: 5px solid #cccccc;
     font-family: "Arial", sans-serif;
-    color:#FFFFFF;
+    color:#000000;
     text-align:center;
      padding-right: 30px;
      padding-left: 30px;
