--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p {
 <h1>javascript tutorial</h1>
     <p id="demo"></p>
     <p id="fb"></p>
-    myFunction();
+     <p id="pic"></p>
 <script> 
     var text;
     var test = prompt("What is 2 + 2?", "Enter number here");
@@ -61,5 +61,6 @@ p {
         document.body.appendChild(x);
         }
     }
+    document.getElementById("pic").innerHTML = myFunction(); 
     </script>
 </body>
