--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p {
 <h1>javascript tutorial</h1>
     <p id="demo"></p>
     <p id="fb"></p>
-     <p id="pic"></p>
+     <img id="pic"></img>
 <script> 
     var text;
     var test = prompt("What is 2 + 2?", "Enter number here");
