--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ p {
     padding-top: 65px;
     padding-bottom: 65px;
     }
+    img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
  
 </style>
 </head>
